# rufi

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.distributed.yml  docker-compose.local.yml
.github/workflows/: build-and-deploy.yml  dispatcher.yml
crates/: index
crates/rf-core/: Cargo.toml  README.md
crates/rf-core/src/: context.rs  export.rs  lang.rs  lib.rs  path.rs  sensor_id.rs  slot.rs  vm.rs
crates/rf-core/src/lang/: builtins.rs  execution.rs  macros.rs
crates/rf-core/src/vm/: round_vm.rs  vm_status.rs
crates/rf-core/tests/: mod.rs
crates/rf-core/tests/by_equivalence/: mod.rs
crates/rf-core/tests/by_round/: mod.rs
crates/rf-core/tests/gradient/: mod.rs
crates/rf-core/tests/utils/: mod.rs
crates/rf-distributed/: Cargo.toml  README.md
crates/rf-distributed-impl/: Cargo.toml  README.md
crates/rf-distributed-impl/src/: lib.rs  mailbox.rs  network.rs  time.rs
crates/rf-distributed/src/: discovery.rs  lib.rs  mailbox.rs  message.rs  network.rs  platform.rs  state.rs  time.rs
crates/rf-distributed/src/discovery/: nbr_sensors_setup.rs
crates/rf-distributed/src/mailbox/: factory.rs
crates/rf-distributed/src/network/: asynchronous.rs  factory.rs  sync.rs
crates/rf-distributed/src/platform/: asynchronous.rs  sync.rs
crates/rf-gradient/: Cargo.toml  README.md
crates/rf-gradient/src/: lib.rs
crates/rf-gradient/tests/: test.rs
crates/rf-gradient/tests/utils/: mod.rs
crates/rufi/: Cargo.toml  README.md
crates/rufi/src/: lib.rs
examples/: README.md  docker-compose.distributed.yml  docker-compose.local.yml
examples/distributed-gradient/: Cargo.toml  Dockerfile
examples/distributed-gradient/src/: main.rs
examples/local-gradient/: Cargo.toml  Dockerfile
examples/local-gradient/src/: main.rs
git-hooks/: commit-msg  install-hooks.sh
