[package]
name = "rf-core"
version = "0.5.2"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "The core library for the RuFi framework"
homepage = "https://github.com/lm98/rufi"
documentation = "https://github.com/lm98/rufi"
repository = "https://github.com/lm98/rufi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rand = "0.8.5"