[package]
name = "rf-distributed-impl"
version = "0.5.2"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "Standard implementations for the rf-distributed crate"
homepage = "https://github.com/lm98/rufi"
documentation = "https://github.com/lm98/rufi"
repository = "https://github.com/lm98/rufi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rf-core = { version = "0.5.2", path = "../rf-core" }
rf-distributed = { version = "0.5.2", path = "../rf-distributed" }
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
rumqttc = "0.23.0"
bytes = "1.5.0"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }