[package]
name = "rufi_gradient"
version = "2.0.8"
edition = "2021"
license = "Apache-2.0"
description = "A simple aggregate program implementing the gradient with the RuFi framework"
homepage = "https://github.com/lm98/rufi"
documentation = "https://github.com/lm98/rufi"
repository = "https://github.com/lm98/rufi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rf-core = { version = "0.4.3", path = "../rf-core" }
