[package]
name = "rufi"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "Rust Fields: a Rust based implementation of the Aggregate Computing paradigm"
homepage = "https://github.com/lm98/rufi"
documentation = "https://github.com/lm98/rufi"
repository = "https://github.com/lm98/rufi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["core", "distributed"]
full = ["core", "distributed", "programs"]
core = []
distributed = []
programs = []

[dependencies]
rf-core = { version = "0.3.1", path = "../rf-core" }
rf-distributed = { version = "0.2.0", path = "../rf-distributed" }
rufi_gradient = { version = "2.0.4", path = "../rf-gradient" }