[package]
name = "rufi"
version = "0.4.3"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "Rust Fields: a Rust based implementation of the Aggregate Computing paradigm"
homepage = "https://github.com/lm98/rufi"
documentation = "https://github.com/lm98/rufi"
repository = "https://github.com/lm98/rufi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = [
    "core",
    "distributed",
    "impls",
    "programs",
]
core = []
distributed = []
impls = []
programs = []

[dependencies]
rf-core = { version = "0.4.3", path = "../rf-core" }
rf-distributed = { version = "0.4.3", path = "../rf-distributed" }
rf-distributed-impl = { version = "0.4.3", path = "../rf-distributed-impl" }
rufi_gradient = { version = "2.0.8", path = "../rf-gradient" }